--- a/src/css/infosuccess.css
+++ b/src/css/infosuccess.css
@@ -8,8 +8,8 @@
     position: absolute;
     margin-top: 30px;
     padding-left: 34px;
-    top: 0%;
-    right: 0;
+    top: 95%;
+    right: 3%;
     width: 320px;
     height: 36px;
     background-color: #009E52;
@@ -21,8 +21,8 @@
     position: absolute;
     margin-top: 30px;
     padding-left: 34px;
-    top: 0%;
-    right: 0;
+    top: 95%;
+    right: 3%;
     width: 320px;
     height: 36px;
     background-color: #e22b07;
