--- a/src/css/infosuccess.css
+++ b/src/css/infosuccess.css
@@ -21,7 +21,7 @@
     position: absolute;
     margin-top: 30px;
     padding-left: 34px;
-    top: 50%;
+    top: 0;
     right: 3%;
     width: 320px;
     height: 36px;
